# opus_qext

./: BUILD_SUMMARY.md  CMakeLists.txt  FIXED_ISSUES.md  QEXT_USAGE.md  README1.md  README_PYPI.md  TROUBLESHOOTING.md  build.bat  build.sh  build_wheel.py  example_usage.md  opus_qext_api.c  opus_qext_api.h  pyproject.toml  qext_patch.txt
.github/workflows/: release.yml
libopusenc-0.2/: Makefile.in  configure
libopusenc-0.2/src/: opusenc.c  resample.c  speex_resampler.h
opus-main/celt/: celt_encoder.c
opus-main/src/: opus_encoder.c  opus_multistream_encoder.c
opus-tools-0.2/src/: opusenc.c  resample.c  speex_resampler.h
python/: __init__.py  _version.py  opus_cffi_def.py  opus_codec.py  opus_numpy.py  opus_torch.py  test_opus.py
win32_compat/: getopt.c  getopt.h  opus_check.h  opus_compat.c  opusfile_stub.c
